BUGFIX: Fixed alignment of Author on shortlog page.

--- a/pyggi/static/style/shortlog.css
+++ b/pyggi/static/style/shortlog.css
@@ -22,7 +22,7 @@
 
 .shortlog td
 {
-	vertical-align: top;
+	vertical-align: baseline;
 	color: #333;
 	font-size: 90%;
 	padding-top: 6px;
